--- a/Toudly/ko.lproj/Localizable.strings
+++ b/Toudly/ko.lproj/Localizable.strings
@@ -34,7 +34,7 @@
 // MARK: - Detail
 
 // AlarmDetailViewController
-"There are no todo lists with notification\nTry adding notifications!" = "알람이 설정된 투두 리스트가 없습니다.\n알림을 추가해보세요!";
+"There are no todo lists with notification\nTry adding notifications!" = "알림이 설정된 투두 리스트가 없습니다.\n알림을 추가해보세요!";
 "Notification" = "알림";
 
 // BookmarkDetailViewController
